# Rielcell

./: Dockerfile  Makefile  README.md  auth  docker-compose.yml  link-github.md
rielcell/: .gitignore  Dockerfile  Makefile  apache.conf
rielcell/symfony/: .gitignore
rielcell/symfony/migrations/: Version20250424230221.php  Version20250506004235.php  Version20250506005902.php  Version20250506011255.php  Version20250506011650.php  Version20250506200651.php  Version20250604144340.php  Version20250604174422.php  Version20250604174445.php
rielcell/symfony/src/Controller/: AdminController.php  MainController.php  RegistrationController.php  SearchController.php  UserProfileController.php
rielcell/symfony/src/Entity/: Repo.php
rielcell/symfony/src/Form/: RepoWebType.php
rielcell/symfony/src/Security/: AppCustomAuthenticator.php
rielcell/symfony/templates/: base.html.twig
server/: Cargo.toml  Makefile
server/src/: db.rs  main.rs
server/view/: index.html  main.html
symfony/config/: services.yaml
symfony/migrations/: Version20250506005857.php  Version20250506010626.php  Version20250506174236.php  Version20250506180608.php  Version20250506194549.php  Version20250506200147.php  Version20250506200816.php
symfony/src/Controller/: DeleteController.php  MainController.php  RepoDisplayController.php
symfony/src/Entity/: User.php
symfony/src/Repository/: RepoRepository.php
symfony/templates/: base.html.twig
symfony/templates/admin/: all_repos.html.twig  index.html.twig
symfony/templates/main/: index.html.twig
symfony/templates/repo/: web_repo.html.twig
(+5 files in other folders)
