[package]
name = "server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.5.1"
actix-rt = "2.9.0"
actix-web = "4.4.1"
bcrypt = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.1"
serde = "1.0.196"
sqlx-core = "0.7.3"
sqlx-mysql = "0.7.3"
actix-files = "0.6.2"
sqlx = { version = "0.7.2", features = ["runtime-async-std", "mysql"] }
