[package]
name = "server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
dotenv = "0.15.0"
mysql = "24.0.0"
serde = { version = "1.0.196", features = ["derive"] }
